--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,12 +1,18 @@
 Package: stimcellselector
 Type: Package
-Title: What the Package Does (Title Case)
+Title: Selects Stimulated Cells
 Version: 0.1.0
-Author: Who wrote it
-Maintainer: The package maintainer <yourself@somewhere.net>
-Description: More about what it does (maybe more than one line)
-    Use four spaces when indenting paragraphs within the Description.
-License: What license is it under?
+Author: Rohit Farmer
+Maintainer: Rohit Farmer <rohit.farmer@gmail.com>
+Description: To select cells from stimulated samples that have likely
+             responded to the stimulant. The selected cells would be 
+             significantly different from the unstimulated cells
+             but also different from other stimulated cells that have
+             likely not responded to the stimulant.
+License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
+Imports: 
+    tibble,
+    ggplot2
