--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,13 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 6.1.1
+URL: https://github.com/rohitfarmer/stimcellselector
+BugReports: https://github.com/rohitfarmer/stimcellselector/issues
 Imports: 
     tibble,
-    ggplot2
+    ggplot2,
+    uwot
+Suggests: 
+    knitr,
+    rmarkdown
+VignetteBuilder: knitr
