--- a/.travis.yml
+++ b/.travis.yml
@@ -3,14 +3,14 @@
 language: R
 sudo: false
 cache: packages
-#warnings_are_errors: true
+warnings_are_errors: false
 
 os:
   - linux
   - osx
 
 r:
-  - 3.0
+  - 3.4
   - 3.6
   - release
   - devel
