--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,6 +16,7 @@ LazyData: true
 RoxygenNote: 6.1.1
 URL: https://github.com/rohitfarmer/stimcellselector
 BugReports: https://github.com/rohitfarmer/stimcellselector/issues
+Depends: R (>= 3.5.0)
 Imports: 
     tibble,
     ggplot2,
