function for single marker selection and updated plots

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,10 @@ export(plot_kde)
 export(plot_sbp)
 export(plot_umap)
 export(stim_cell_selector)
+export(stim_cell_selector_single_marker)
 import(dplyr)
 import(ggplot2)
+importFrom(ggridges,geom_density_ridges)
 importFrom(stats,fisher.test)
 importFrom(stats,kmeans)
 importFrom(stats,median)
