--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,11 +3,15 @@
 export(plot_kde)
 export(plot_sbp)
 export(plot_umap)
+export(state_marker_selection)
 export(stim_cell_selector)
 export(stim_cell_selector_single_marker)
 import(dplyr)
 import(ggplot2)
+import(skmeans)
 importFrom(ggridges,geom_density_ridges)
+importFrom(lme4,lmer)
+importFrom(stats,anova)
 importFrom(stats,fisher.test)
 importFrom(stats,kmeans)
 importFrom(stats,median)
