--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(plot_kde)
 export(plot_sbp)
 export(plot_umap)
 export(state_marker_selection)
+export(state_marker_selection_lmm)
 export(stim_cell_selector)
 export(stim_cell_selector_single_marker)
 import(dplyr)
@@ -13,8 +14,10 @@ importFrom(ggridges,geom_density_ridges)
 importFrom(lme4,lmer)
 importFrom(stats,anova)
 importFrom(stats,fisher.test)
+importFrom(stats,glm)
 importFrom(stats,kmeans)
 importFrom(stats,median)
 importFrom(tibble,as_tibble)
+importFrom(tibble,rownames_to_column)
 importFrom(tidyr,gather)
 importFrom(uwot,umap)
