--- a/.github/workflows/r_mac.yml
+++ b/.github/workflows/r_mac.yml
@@ -6,7 +6,7 @@
 # See https://github.com/r-lib/actions/tree/master/examples#readme for
 # additional example workflows available for the R community.
 
-name: R
+name: R_Mac
 
 on:
   push:
@@ -19,7 +19,7 @@ jobs:
     runs-on: macOS-latest
     strategy:
       matrix:
-        r-version: [3.5, 3.6]
+        r-version: [3.6, 4.0]
 
     steps:
       - uses: actions/checkout@v2
