--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,6 @@
 export(plot_kde)
 export(plot_sbp)
 export(plot_umap)
-export(state_marker_selection)
 export(state_marker_selection_lmm)
 export(stim_cell_selector)
 export(stim_cell_selector_single_marker)
@@ -13,10 +12,11 @@ import(skmeans)
 importFrom(ggridges,geom_density_ridges)
 importFrom(lme4,lmer)
 importFrom(stats,anova)
+importFrom(stats,as.formula)
 importFrom(stats,fisher.test)
-importFrom(stats,glm)
 importFrom(stats,kmeans)
 importFrom(stats,median)
+importFrom(stats,p.adjust)
 importFrom(tibble,as_tibble)
 importFrom(tibble,rownames_to_column)
 importFrom(tidyr,gather)
