removed deprecated code

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,7 +10,9 @@ import(dplyr)
 import(ggplot2)
 import(skmeans)
 importFrom(ggridges,geom_density_ridges)
+importFrom(lme4,.makeCC)
 importFrom(lme4,lmer)
+importFrom(lme4,lmerControl)
 importFrom(stats,anova)
 importFrom(stats,as.formula)
 importFrom(stats,fisher.test)
