--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,7 +17,9 @@ importFrom(lme4,lmer)
 importFrom(lme4,lmerControl)
 importFrom(stats,anova)
 importFrom(stats,as.formula)
+importFrom(stats,coefficients)
 importFrom(stats,fisher.test)
+importFrom(stats,glm)
 importFrom(stats,kmeans)
 importFrom(stats,median)
 importFrom(stats,p.adjust)
