Marker ranking functions needs checking.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ importFrom(graphics,plot)
 importFrom(lme4,.makeCC)
 importFrom(lme4,lmer)
 importFrom(lme4,lmerControl)
+importFrom(lmtest,lrtest)
 importFrom(stats,anova)
 importFrom(stats,as.formula)
 importFrom(stats,coefficients)
