marker ranking scripts modified

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,7 @@ import(Boruta)
 import(dplyr)
 import(ggplot2)
 import(skmeans)
+importFrom(dplyr,slice_sample)
 importFrom(ggridges,geom_density_ridges)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,png)
