--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,8 @@ import(Boruta)
 import(dplyr)
 import(ggplot2)
 importFrom(broom,tidy)
+importFrom(dplyr,filter)
+importFrom(dplyr,select)
 importFrom(dplyr,slice_sample)
 importFrom(ggridges,geom_density_ridges)
 importFrom(grDevices,dev.off)
@@ -22,6 +24,7 @@ importFrom(graphics,plot)
 importFrom(lme4,.makeCC)
 importFrom(lme4,lmer)
 importFrom(lme4,lmerControl)
+importFrom(parallel,detectCores)
 importFrom(stats,anova)
 importFrom(stats,as.formula)
 importFrom(stats,fisher.test)
