--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,12 +3,8 @@
 export(HDStIM)
 export(marker_ranking_boruta)
 export(plot_K_Fisher)
-export(plot_kde)
+export(plot_exprs)
 export(plot_umap)
-export(plots_selected_markers)
-export(scs_selected_markers)
-export(state_marker_selection_lmm)
-export(stim_cell_selector_single_marker)
 import(Boruta)
 import(dplyr)
 import(ggplot2)
@@ -21,18 +17,11 @@ importFrom(grDevices,dev.off)
 importFrom(grDevices,png)
 importFrom(grDevices,rainbow)
 importFrom(graphics,plot)
-importFrom(lme4,.makeCC)
-importFrom(lme4,lmer)
-importFrom(lme4,lmerControl)
 importFrom(parallel,detectCores)
-importFrom(stats,anova)
-importFrom(stats,as.formula)
 importFrom(stats,fisher.test)
 importFrom(stats,kmeans)
 importFrom(stats,median)
-importFrom(stats,p.adjust)
 importFrom(tibble,as_tibble)
-importFrom(tibble,rownames_to_column)
 importFrom(tidyr,gather)
 importFrom(tidyselect,all_of)
 importFrom(uwot,umap)
