--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,9 +18,11 @@ importFrom(grDevices,png)
 importFrom(grDevices,rainbow)
 importFrom(graphics,plot)
 importFrom(parallel,detectCores)
+importFrom(stats,as.formula)
 importFrom(stats,fisher.test)
 importFrom(stats,kmeans)
 importFrom(stats,median)
+importFrom(stats,p.adjust)
 importFrom(tibble,as_tibble)
 importFrom(tidyr,gather)
 importFrom(tidyselect,all_of)
