--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,7 +1,7 @@
-pandoc: 2.3.1
-pkgdown: 1.5.1
+pandoc: 2.14.0.3
+pkgdown: 2.0.2
 pkgdown_sha: ~
 articles:
-  stim_cell_selector: stim_cell_selector.html
-last_built: 2020-12-11T23:46Z
+  HDStIM: HDStIM.html
+last_built: 2022-04-18T20:22Z
 
