--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,8 @@ License: GPL-3
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.2
-URL: https://github.com/niaid/HDStIM
+URL: https://github.com/niaid/HDStIM,
+    https://niaid.github.io/HDStIM/
 BugReports: https://github.com/niaid/HDStIM/issues
 Depends: R (>= 3.5.0)
 Imports: 
