--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -3,5 +3,8 @@ pkgdown: 2.0.2
 pkgdown_sha: ~
 articles:
   HDStIM: HDStIM.html
-last_built: 2022-04-18T20:30Z
+last_built: 2022-04-19T18:55Z
+urls:
+  reference: https://niaid.github.io/HDStIM/reference
+  article: https://niaid.github.io/HDStIM/articles
 
