--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,9 +1,9 @@
-pandoc: 2.14.0.3
+pandoc: '2.18'
 pkgdown: 2.0.2
 pkgdown_sha: ~
 articles:
   HDStIM: HDStIM.html
-last_built: 2022-04-21T18:27Z
+last_built: 2022-04-28T18:59Z
 urls:
   reference: https://niaid.github.io/HDStIM/reference
   article: https://niaid.github.io/HDStIM/articles
