--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -15,7 +15,7 @@ Authors@R:
              comment = c(ORCID = "0000-0001-5140-0141")),
       person(given = "John",
              family = "Tsang",
-             role = "pdr",
+             role = c("aut","pdr"),
              email = "john.tsang@nih.gov",
              comment = c(ORCID = "0000-0003-3186-3047")))
 Description: The goal of this package is to identify response to a stimulant in
@@ -33,7 +33,7 @@ RoxygenNote: 7.1.2
 URL: https://github.com/niaid/HDStIM,
     https://niaid.github.io/HDStIM/
 BugReports: https://github.com/niaid/HDStIM/issues
-Depends: R (>= 3.5.0)
+Depends: R (>= 3.6.0)
 Imports: 
     tibble,
     ggplot2,
