--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -18,13 +18,7 @@ Authors@R:
              role = c("aut","pdr"),
              email = "john.tsang@nih.gov",
              comment = c(ORCID = "0000-0003-3186-3047")))
-Description: The goal of this package is to identify response to a stimulant in
-             CyTOF/Flow cytometry stimulation assays by labeling cells as responded
-             or not based on an unsupervised high dimensional approach. Starting from
-             the annotated cell populations either through automated clustering such
-             as FlowSOM or traditional cell gating, the primary function `HDStIM()`
-             follows a heuristic approach to label cells as responding or
-             non-responding.
+Description: A high dimensional and end-to-end unsupervised method for identifying responses to a stimulant in mass or flow cytometry stimulation assay. Starting from the annotated cell populations either through automated clustering or traditional gating for a combined set of stimulated and unstimulated samples, HDStIM() labels cells as responding or non-responding. Besides cell labeling, the package also provides auxiliary functions to rank signaling markers based on their contribution to identifying responses and plot diagnostic plots.
 License: BSD_3_clause + file LICENSE | file LICENSE
 Encoding: UTF-8
 LazyData: true
