--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,9 +1,9 @@
-pandoc: '2.18'
-pkgdown: 2.0.2
+pandoc: 2.19.2
+pkgdown: 2.0.6
 pkgdown_sha: ~
 articles:
   HDStIM: HDStIM.html
-last_built: 2022-06-23T14:15Z
+last_built: 2022-12-14T19:59Z
 urls:
   reference: https://niaid.github.io/HDStIM/reference
   article: https://niaid.github.io/HDStIM/articles
