--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: HDStIM
 Type: Package
 Title: High Dimensional Stimulation Immune Mapping ('HDStIM')
-Version: 0.1.1
+Version: 1.0.0
 Authors@R: 
     c(person(given = "Rohit",
              family = "Farmer",
@@ -34,11 +34,14 @@ Imports:
     uwot,
     dplyr,
     tidyr,
+    magrittr,
     broom,
     tidyselect, 
     ggridges,
     Boruta,
-    scales
+    scales,
+    ComplexHeatmap,
+    circlize
 Suggests: 
     knitr,
     rmarkdown,
