--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,14 +4,21 @@ export(HDStIM)
 export(marker_ranking_boruta)
 export(plot_K_Fisher)
 export(plot_exprs)
+export(plot_marker_ranking_heatmap)
 export(plot_umap)
 import(Boruta)
+import(ComplexHeatmap)
+import(circlize)
 import(dplyr)
 import(ggplot2)
+import(magrittr)
 importFrom(broom,tidy)
 importFrom(dplyr,filter)
+importFrom(dplyr,group_by)
+importFrom(dplyr,mutate)
 importFrom(dplyr,select)
 importFrom(dplyr,slice_sample)
+importFrom(dplyr,ungroup)
 importFrom(ggridges,geom_density_ridges)
 importFrom(grDevices,dev.off)
 importFrom(grDevices,png)
