--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -28,6 +28,7 @@ URL: https://github.com/niaid/HDStIM,
     https://niaid.github.io/HDStIM/
 BugReports: https://github.com/niaid/HDStIM/issues
 Depends: R (>= 3.6.0)
+biocViews: ComplexHeatmap
 Imports: 
     tibble,
     ggplot2,
@@ -40,8 +41,8 @@ Imports:
     ggridges,
     Boruta,
     scales,
-    ComplexHeatmap,
-    circlize
+    circlize,
+    ComplexHeatmap
 Suggests: 
     knitr,
     rmarkdown,
